<resources>
    <string name="app_name">MaterialDesign_demo</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_open">打开</string>

    <string name="reading">读书</string>
    <string name="movies">电影</string>
    <string name="music">音乐</string>
    <string name="city">同城</string>
    <string name="group">小组</string>

    <string name="no_camera">照相功能未找到！</string>
    <string name="no_sdcard">SD卡不可用！</string>

    <!-- AndPermission权限库 -->
    <string name="setting">Setting</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>

    <string name="permission_camera">Camera</string>
    <string name="permission_contact">Contact</string>
    <string name="permission_location">Location</string>

    <string name="permission_calendar">Calendar</string>
    <string name="permission_microphone">Microphone</string>
    <string name="permission_storage">Storage</string>

    <string name="permission_phone">Phone</string>
    <string name="permission_sensors">Sensors</string>
    <string name="permission_sms">SMS</string>

    <string name="successfully">Successful</string>
    <string name="failure">Failure</string>

    <string name="title_dialog">Tips</string>
    <string name="message_permission_rationale">授予该应用以下权限:\n\n%1$s</string>
    <string name="message_permission_always_failed">We need these permissions, please give us permission in the settings:\n\n%1$s</string>

    <string name="permission_setting">Permission Setting</string>
    <string name="message_install_failed">Your phone is not allowed us to install apps.</string>
    <string name="message_overlay_failed">Your phone is not allowed us to draw on other applications.</string>
    <string name="message_setting_comeback">The user comes back from the settings page.</string>

</resources>
